src/test/ui/const-generics/issues/issue-68977.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-68977.rs:29:17
   |
LL |     PhantomU8<{(INT_BITS + FRAC_BITS + 7) / 8}>;
   |                 ^^^^^^^^ cannot perform const operation using `INT_BITS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `INT_BITS`

error: generic parameters may not be used in const operations
  --> $DIR/issue-68977.rs:29:28
   |
LL |     PhantomU8<{(INT_BITS + FRAC_BITS + 7) / 8}>;
   |                            ^^^^^^^^^ cannot perform const operation using `FRAC_BITS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `FRAC_BITS`

error: aborting due to 2 previous errors

